// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonRoot> Props should not have default color in low or medium emphasis 1`] = `
<ButtonRoot
  emphasis="low"
  variant="button"
>
  <button
    className="lumx-button lumx-button--color-dark lumx-button--emphasis-low lumx-button--variant-button"
    type="button"
  />
</ButtonRoot>
`;

exports[`<ButtonRoot> Props should use default color 1`] = `
<ButtonRoot
  variant="button"
>
  <button
    className="lumx-button lumx-button--color-dark lumx-button--variant-button"
    type="button"
  />
</ButtonRoot>
`;

exports[`<ButtonRoot> Props should use given props 1`] = `
<ButtonRoot
  color="red"
  emphasis="high"
  hasBackground={true}
  size="s"
  theme="dark"
  variant="icon"
>
  <div
    className="lumx-button-wrapper lumx-button-wrapper--variant-icon"
  >
    <ButtonRoot
      color="red"
      emphasis="high"
      hasBackground={false}
      size="s"
      theme="dark"
      variant="icon"
    >
      <button
        className="lumx-button lumx-button--color-red lumx-button--emphasis-high lumx-button--size-s lumx-button--theme-dark lumx-button--variant-icon"
        type="button"
      />
    </ButtonRoot>
  </div>
</ButtonRoot>
`;

exports[`<ButtonRoot> Snapshots and structure should render anchor button with label 1`] = `
<ButtonRoot
  href="example.com"
  target="_blank"
  variant="button"
>
  <a
    className="lumx-button lumx-button--color-dark lumx-button--variant-button"
    href="example.com"
    target="_blank"
  >
    Label
  </a>
</ButtonRoot>
`;

exports[`<ButtonRoot> Snapshots and structure should render anchor button with wrapper and label 1`] = `
<ButtonRoot
  hasBackground={true}
  href="example.com"
  target="_blank"
  variant="button"
>
  <div
    className="lumx-button-wrapper lumx-button-wrapper--variant-button"
  >
    <ButtonRoot
      color="dark"
      hasBackground={false}
      href="example.com"
      target="_blank"
      variant="button"
    >
      <a
        className="lumx-button lumx-button--color-dark lumx-button--variant-button"
        href="example.com"
        target="_blank"
      >
        Label
      </a>
    </ButtonRoot>
  </div>
</ButtonRoot>
`;

exports[`<ButtonRoot> Snapshots and structure should render button with label 1`] = `
<ButtonRoot
  variant="button"
>
  <button
    className="lumx-button lumx-button--color-dark lumx-button--variant-button"
    type="button"
  >
    Label
  </button>
</ButtonRoot>
`;

exports[`<ButtonRoot> Snapshots and structure should render button with wrapper and label 1`] = `
<ButtonRoot
  hasBackground={true}
  variant="button"
>
  <div
    className="lumx-button-wrapper lumx-button-wrapper--variant-button"
  >
    <ButtonRoot
      color="dark"
      hasBackground={false}
      variant="button"
    >
      <button
        className="lumx-button lumx-button--color-dark lumx-button--variant-button"
        type="button"
      >
        Label
      </button>
    </ButtonRoot>
  </div>
</ButtonRoot>
`;
